--- a/PIM/PIM.Web/Views/Projects/ProjectForm.cshtml
+++ b/PIM/PIM.Web/Views/Projects/ProjectForm.cshtml
@@ -14,10 +14,18 @@
     else
     { <h2>New Project</h2>}
 
-    <div class="form-group">
-        @Html.LabelFor(p => p.Project.ProjectNumber)
+<div class="form-group">
+    @Html.LabelFor(p => p.Project.ProjectNumber)
+    @if (Model.EditMode == true)
+    {
+        @Html.TextBoxFor(p => p.Project.ProjectNumber, new { @class = "form-control", @readonly = "readonly" })
+    }
+    else
+    {
         @Html.TextBoxFor(p => p.Project.ProjectNumber, new { @class = "form-control" })
-    </div>
+    }
+
+</div>
     <div class="form-group">
         @Html.LabelFor(p => p.Project.Name)
         @Html.TextBoxFor(p => p.Project.Name, new { @class = "form-control" })
@@ -51,7 +59,12 @@
         @Html.LabelFor(p => p.Members)
         @Html.TextBoxFor(p => p.Members, new { @class = "form-control" })
     </div>
-    @Html.HiddenFor(p => p.Project.ID)
+
+    <div>
+        @Html.LabelFor(p => p.Project.ID)
+        @Html.TextBoxFor(p => p.Project.ID)
+    </div>
+
     <button type="button" class="btn">@Html.ActionLink("Cancel", "Index", "Projects")</button>
     if (Model.EditMode == true)
     {
