--- a/PIM/PIM.Web/Content/Site.css
+++ b/PIM/PIM.Web/Content/Site.css
@@ -22,3 +22,16 @@ select,
 textarea {
     max-width: 280px;
 }
+.field-validation-error{
+    color: red;
+}
+.input-validation-error{
+    border: 2px solid red;
+}
+a.deleteButton {
+    background: url(../favicon.ico) no-repeat top left;
+    display: block;
+    width: 50px;
+    height: 50px;
+    text-indent: -9999px; /* hides the link text */
+}
