--- a/PIM/PIM.Web/Views/Projects/Index.cshtml
+++ b/PIM/PIM.Web/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PIM.Core.Project>
+﻿@model PIM.Web.Models.IndexPageViewModel
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -7,9 +7,11 @@
 <h2>Projects List</h2>
 <p>
     @Html.ActionLink("New Project", "NewProjectForm", "Projects", null, new { @class = "btn btn-primary" })
-    @Html.ActionLink("Search Project", "Search", "Projects", null, new { @class = "btn btn-primary" })
+
+
 </p>
-@if (!Model.Any())
+@Html.Partial("_SearchView")
+@if (!Model.Projects.Any())
 {
     <p>We don't have any projects yet</p>
 }
@@ -17,81 +19,96 @@ else
 {
 
 
-<table id="customers" class="table table-bordered table-hover">
-    <thead>
-        <tr>
-            <th></th>
-            <th>Project Number</th>
-            <th>Project Name</th>
-            <th>Status</th>
-            <th>Customer</th>
-            <th>Start Date</th>
-            <th>Delete</th>
+    <table id="customers" class="table table-bordered table-hover">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Project Number</th>
+                <th>Project Name</th>
+                <th>Status</th>
+                <th>Customer</th>
+                <th>Start Date</th>
+                <th>Delete</th>
 
 
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var project in Model)
-        {
-        <tr>
-            <td><input type="checkbox"></td>
-            <td>@project.ProjectNumber</td>
-            <td>@Html.ActionLink(project.Name,"EditProjectForm", "Projects", null, new { id = project.ID })</td>
-            <td>@project.Status</td>
-            <td>@project.Customer</td>
-            <td>@project.StartDate</td>
-            <td>@project.ID</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var project in Model.Projects)
+            {
+                <tr>
+                    <td><input type="checkbox"></td>
+                    <td>@project.ProjectNumber</td>
+                    <td>
+                        <a href="/Projects/EditProjectForm/@project.ID" id="@project.ID">@project.Name</a>
+                    </td>
+                    <td>@project.Status</td>
+                    <td>@project.Customer</td>
+                    <td>@project.StartDate</td>
+
+                    @if (project.Status == PIM.Core.Status.New)
+                    {
+                        <td>
+                            
+                            <a href="/Projects/Delete/@project.ID" id="@project.ID">
+                                delete
+                            </a>
+                        </td>
+                    }
+                    else
+                    {
+                        <td></td>
+                    }
 
 
-        </tr>
-        }
-    </tbody>
-</table>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
 @*@section scripts
-{
-    <script>
-        $(document).ready(function () {
-            var table = $("#customers").DataTable({
-                ajax: {
-                    url: "/api/customers",
-                    dataSrc: ""
-                },
-                columns: [
-                    {
-                        data: "name",
-                        render: function(data, type, customer) {
-                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
-                        }
+    {
+        <script>
+            $(document).ready(function () {
+                var table = $("#customers").DataTable({
+                    ajax: {
+                        url: "/api/customers",
+                        dataSrc: ""
                     },
-                    {
-                        data: "membershipType.name"
-                    },
-                    {
-                        data: "id",
-                        render: function(data) {
-                            return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
-                        }
-                    }
-                ]
-            });
-
-
-            $("#customers").on("click", ".js-delete", function () {
-                var button = $(this);
-
-                bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
-                    if (result) {
-                        $.ajax({
-                            url: "/api/customers/" + button.attr("data-customer-id"),
-                            method: "DELETE",
-                            success: function () {
-                                table.row(button.parents("tr")).remove().draw();
+                    columns: [
+                        {
+                            data: "name",
+                            render: function(data, type, customer) {
+                                return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
                             }
-                        });
-                    }
+                        },
+                        {
+                            data: "membershipType.name"
+                        },
+                        {
+                            data: "id",
+                            render: function(data) {
+                                return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
+                            }
+                        }
+                    ]
+                });
+
+
+                $("#customers").on("click", ".js-delete", function () {
+                    var button = $(this);
+
+                    bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
+                        if (result) {
+                            $.ajax({
+                                url: "/api/customers/" + button.attr("data-customer-id"),
+                                method: "DELETE",
+                                success: function () {
+                                    table.row(button.parents("tr")).remove().draw();
+                                }
+                            });
+                        }
+                    });
                 });
             });
-        });
-    </script>*@
+        </script>*@
