--- a/PIM/PIM.Web/Views/Projects/Index.cshtml
+++ b/PIM/PIM.Web/Views/Projects/Index.cshtml
@@ -1,15 +1,11 @@
 ﻿@model PIM.Web.Models.IndexPageViewModel
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_CustomLayout.cshtml";
 }
 
-<h2>Projects List</h2>
-<p>
-    @Html.ActionLink("New Project", "NewProjectForm", "Projects", null, new { @class = "btn btn-primary" })
+<h4>Projects List</h4>
 
-
-</p>
 @Html.Partial("_SearchView")
 @if (!Model.Projects.Any())
 {
@@ -19,108 +15,86 @@ else
 {
 
 
-    <table id="customers" class="table table-bordered table-hover">
+    <table style="width:100%" id="customers" class="table table-bordered table-hover table-sm">
         <thead>
             <tr>
-                <th></th>
-                <th>Project Number</th>
-                <th>Project Name</th>
-                <th>Status</th>
-                <th>Customer</th>
-                <th>Start Date</th>
-                <th>Delete</th>
-
-
+                <th style="width: 3%"></th>
+                <th style="width: 5%">Number</th>
+                <th style="width: 45%">Project Name</th>
+                <th style="width: 10%">Status</th>
+                <th style="width: 20%">Customer</th>
+                <th style="width: 10%">Start Date</th>
+                <th style="width: 7%">Delete</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var project in Model.Projects)
             {
-            <tr>
-                @if (project.Status == PIM.Core.Status.New)
-                {
-                    <td><input type="checkbox" name="@project.Name" value="@project.ID"></td>
-                }
-                else
-                {
-                    <td></td>
-                }
+                <tr id="@project.ID">
+                    @if (project.Status == PIM.Core.Status.New)
+                    {
+                        <td align="center"><input type="checkbox" name="@project.Name" value="@project.ID"> </td>
+                    }
+                    else
+                    {
+                        <td></td>
+                    }
 
-                <td>@project.ProjectNumber</td>
-                <td>
-                    <a href="/Projects/EditProjectForm/@project.ID" id="@project.ID">@project.Name</a>
-                </td>
-                <td>@project.Status</td>
-                <td>@project.Customer</td>
-                <td>@project.StartDate</td>
+                    <td><a href="/Projects/ProjectDetails/@project.ID" id="@project.ID"> @project.ProjectNumber</a></td>
+                    <td>@project.Name</td>
+                    <td>@project.Status</td>
+                    <td>@project.Customer</td>
+                    <td input type="date">@project.StartDate.ToString("dd/MM/yyyy")</td>
 
-                @if (project.Status == PIM.Core.Status.New)
-                {
-                    <td>
+                    @if (project.Status == PIM.Core.Status.New)
+                    {
+                        <td align="center">
+                            @using (Html.BeginForm("Delete", "Projects", FormMethod.Post, new { id = "DeleteForm" }))
+                            {
 
-                        <a href="/Projects/Delete/@project.ID" id="@project.ID">
-                            delete
-                        </a>
-                    </td>
-                }
-                else
-                {
-                    <td></td>
-                }
+                                <input name="id" value="@project.ID" type="hidden" />
+
+                                <button class="delete-btn"><img src="~/Resources/trash-can.png" width="22" align="middle"></button>
+                            }
+                        </td>
+
+                    }
+                    else
+                    {
+                        <td></td>
+                    }
+                </tr>
 
 
-            </tr>
             }
         </tbody>
     </table>
-    <div>
-        @Html.ActionLink("New Project", "NewProjectForm", "Projects", null, new { @class = "btn btn-primary" })
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Confirm Delete</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure you want to delete selected project?</p>
+                </div>
+                <div class="modal-footer">
+
+                    <button type="button" class="btn btn-primary" id="btnDeleteYes" heref="#">Yes</button>
+
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                        No
+                    </button>
+                </div>
+            </div>
+
+        </div>
     </div>
 }
-
-@*@section scripts
-    {
-        <script>
-            $(document).ready(function () {
-                var table = $("#customers").DataTable({
-                    ajax: {
-                        url: "/api/customers",
-                        dataSrc: ""
-                    },
-                    columns: [
-                        {
-                            data: "name",
-                            render: function(data, type, customer) {
-                                return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
-                            }
-                        },
-                        {
-                            data: "membershipType.name"
-                        },
-                        {
-                            data: "id",
-                            render: function(data) {
-                                return "<button class='btn-link js-delete' data-customer-id=" + data + ">Delete</button>";
-                            }
-                        }
-                    ]
-                });
-
-
-                $("#customers").on("click", ".js-delete", function () {
-                    var button = $(this);
-
-                    bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
-                        if (result) {
-                            $.ajax({
-                                url: "/api/customers/" + button.attr("data-customer-id"),
-                                method: "DELETE",
-                                success: function () {
-                                    table.row(button.parents("tr")).remove().draw();
-                                }
-                            });
-                        }
-                    });
-                });
-            });
-        </script>*@
+@section scripts {
+    @Scripts.Render("~/Scripts/projects.js")
+}
