--- a/PIM/PIM.Web/Views/Projects/ProjectDetails.cshtml
+++ b/PIM/PIM.Web/Views/Projects/ProjectDetails.cshtml
@@ -24,63 +24,63 @@
     <hr />
     <div class="form-group row">
         @Html.LabelFor(p => p.Project.ProjectNumber, new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
+        <div class="col-sm-3">
             @if (Model.EditMode == true)
             {
-                @Html.TextBoxFor(p => p.Project.ProjectNumber, new { size = 20, style = "background-color: #ced4da", @class = "custom-form-control", @readonly = "readonly" })
+                @Html.TextBoxFor(p => p.Project.ProjectNumber, new { style = "background-color: #ced4da", @class = "custom-form-control", @readonly = "readonly" })
             }
             else
             {
-                @Html.TextBoxFor(p => p.Project.ProjectNumber, new { size = 20, @class = "custom-form-control" })
+                @Html.TextBoxFor(p => p.Project.ProjectNumber, new {style="width:100%", @class = "custom-form-control" })
 
             }
         </div>
     </div>
     <div class="form-group row">
         @Html.LabelFor(p => p.Project.Name, new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
-            @Html.TextBoxFor(p => p.Project.Name, new { @class = "custom-form-control", size = 80 })
+        <div class="col-sm-8">
+            @Html.TextBoxFor(p => p.Project.Name, new { @class = "custom-form-control" })
         </div>
     </div>
     <div class="form-group row">
         @Html.LabelFor(p => p.Project.Customer, new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
-            @Html.TextBoxFor(p => p.Project.Customer, new { size = 80, @class = "custom-form-control" })
+        <div class="col-sm-8">
+            @Html.TextBoxFor(p => p.Project.Customer, new { @class = "custom-form-control" })
         </div>
     </div>
     <div class="form-group row">
         @Html.LabelFor(p => p.Project.GroupId, new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
+        <div class="col-sm-3">
             @Html.DropDownListFor(p => p.Project.GroupId, new SelectList(Model.Groups, "ID", "GroupLeader.Visa"), "Select Group", new { @class = "custom-form-control" })
         </div>
     </div>
     <div class="form-group row">
 
         @Html.LabelFor(p => p.Members, new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
-            @Html.TextBoxFor(p => p.Members, new { size = 80, @class = "custom-form-control" })
+        <div class="col-sm-8">
+            @Html.TextBoxFor(p => p.Members, new { @class = "custom-form-control" })
         </div>
     </div>
     <div class="form-group row">
         @Html.LabelFor(p => p.Project.Status, new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
+        <div class="col-sm-3">
             @Html.EnumDropDownListFor(p => p.Project.Status, "Select Status", new { @class = "custom-form-control" })
         </div>
     </div>
-    <div class ="row" id="date">
+    <div class ="form-group row" id="date">
 
         
             @Html.LabelFor(p => p.Project.StartDate, new { @class = "col-sm-2 col-form-label" })
        
-        <div class="col-sm-3" style="margin-left: 5px">
-            @Html.TextBoxFor(p => p.Project.StartDate, "{0:dd/MM/yyyy}", new { size = 20, @class = "custom-form-control" })
+        <div class="col-sm-3" >
+            @Html.TextBoxFor(p => p.Project.StartDate, "{0:dd/MM/yyyy}", new {style = "margin-left: 5px", @class = "custom-form-control"})
         </div>
         
-       
-            @Html.LabelFor(p => p.Project.EndDate, new { @class = "col-sm-2 col-form-label" })
+        <div class="col-sm-1"><br /></div>
+            @Html.LabelFor(p => p.Project.EndDate, new { @class = "col-form-label" })
             
         <div class="col-sm-3">
-            @Html.TextBoxFor(p => p.Project.EndDate, "{0:dd/MM/yyyy}", new { size = 20, @class = "custom-form-control", style="margin-left: -25px" })
+            @Html.TextBoxFor(p => p.Project.EndDate, "{0:dd/MM/yyyy}", new { style="margin-left: 58px", @class = "custom-form-control"})
         </div>
     </div>
     <hr />
@@ -89,14 +89,20 @@
 
     </div>
     <div id="projects-btn" class="row">
-        <button id="cancel-btn" type="button" class="btn btn-secondary col-3">@Html.ActionLink("Cancel", "Index", "Projects")</button>
-        @if (Model.EditMode == true)
-        {
-            <button type="submit" class="btn btn-primary">Edit Project</button>
+        <div class="col-sm-5"><br /></div>
+        <div class="col-sm-2">
+            <button id="cancel-btn" type="button" class="btn btn-secondary">@Html.ActionLink("Cancel", "Index", "Projects")</button>
+        </div>
+        <div class="col-sm-1"><br /></div>
+        <div class="col-sm-2">
+            @if (Model.EditMode == true)
+            {
+                <button type="submit" class="btn btn-primary">Edit Project</button>
 
+            }
+            else
+            { <button type="submit" class="btn btn-primary">Create Project</button>}
+        </div>
+        </div>
         }
-        else
-        { <button type="submit" class="btn btn-primary col-3">Create Project</button>}
-    </div>
-}
 
