--- a/PIM/PIM.Web/Views/Shared/_CustomLayout.cshtml
+++ b/PIM/PIM.Web/Views/Shared/_CustomLayout.cshtml
@@ -28,7 +28,7 @@
         <div id="content" class="row">
             <div id="column1" class="col-md-2">
                 <ul>
-                    <li><h4><a href="/Projects/Index/">Project List</a></h4></li>
+                    <li><h4><a href="/Projects/">Project List</a></h4></li>
                     <li><a href="/Projects/ProjectDetails/">New Project</a></li>
                 </ul>
             </div>
