--- a/PIM/PIM.Web/Views/Shared/_CustomLayout.cshtml
+++ b/PIM/PIM.Web/Views/Shared/_CustomLayout.cshtml
@@ -8,13 +8,15 @@
 
     @Styles.Render("~/Content/bootstrap-sandstone.css")
     @Scripts.Render("~/bundles/modernizr")
-   
+
     @Styles.Render("~/Content/bootstrap.css")
     @Styles.Render("~/Content/Custom.css")
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link href="~/Content/themes/base/jquery-ui.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
 </head>
