refactor modal bootstrap

--- a/PIM/PIM.Web/Views/Projects/ProjectDetails.cshtml
+++ b/PIM/PIM.Web/Views/Projects/ProjectDetails.cshtml
@@ -111,7 +111,7 @@
     <script>
         $(function () {
             $(".datepicker").datepicker({
-                dateFormat: "dd-mm-yy",
+                dateFormat: "dd.mm.yy",
                 changeMonth: true,
                 changeYear: true,
                 yearRange: "-10:+10",
