--- a/PIM/PIM.Web/Views/Projects/Index.cshtml
+++ b/PIM/PIM.Web/Views/Projects/Index.cshtml
@@ -47,7 +47,7 @@ else
                         <td>@project.Name</td>
                         <td>@project.Status</td>
                         <td>@project.Customer</td>
-                        <td input type="date">@project.StartDate.ToString("dd/MM/yyyy")</td>
+                        <td input type="date">@project.StartDate.ToString("dd.MM.yyyy")</td>
 
                         @if (project.Status == PIM.Core.Status.New)
                         {
@@ -68,19 +68,17 @@ else
                         }
                     </tr>
 
-
                 }
+                <tr id="deleteMultiple">
+                    <td colspan="7">
+
+                        <span id="countChecks"> No item selected</span>
+                        <span style="float:right; padding-right:19px">delete selected items <img src="~/Resources/trash-can.png" width="22" id="delete-multiple-btn" align="right"></span>
+                    </td>
+                </tr>
             </tbody>
 
         </table>
-        <div id="deleteMultiple">
-            <button type="submit" id="delete-multiple-btn" value="Delete selected item">
-                <img src="~/Resources/trash-can.png" width="22" align="middle">
-            </button>
-            <p>delete selected items</p>
-        </div>
-
-        <p id="countChecks">No item selected</p>
 
         @Html.PagedListPager(Model.Projects, page => Url.Action("Index", new RouteValueDictionary{
            { "ProjectCriteria.Status", (int?)Model.ProjectCriteria.Status },
