handle concurrent update

--- a/PIM/PIM.Web/Views/Projects/ProjectDetails.cshtml
+++ b/PIM/PIM.Web/Views/Projects/ProjectDetails.cshtml
@@ -86,6 +86,7 @@
     <hr />
     <div>
         @Html.HiddenFor(p => p.Project.ID)
+        @Html.HiddenFor(p => p.Project.Version)
 
     </div>
     <div id="projects-btn" class="row">
